# study_opengl

./: .gitattributes  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/example/: Camera.h  Example001.cpp  Example001.h  Example002.cpp  Example002.h  Shader.h
src/example/shader/: 027.frag.glsl  5.3.light_casters.fs.glsl  5.3.light_casters.vs.glsl
src/gui/: Exhibition.cpp  Exhibition.h  GuiApplication.cpp  GuiApplication.h  Painter.cpp  Painter.h
src/helper/: Boxes.cpp  Boxes.h  Camera.cpp  Camera.h  Helper.cpp  Helper.h  Main.cpp  Main.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Plane.cpp  Plane.h  Skybox.cpp  Skybox.h  config.h  config.h.in  stbImage.h
src/shader/: Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h
src/src01/: Main001.cpp  Main001.h  Main002.cpp  Main002.h  Main003.cpp  Main003.h  Main004.cpp  Main004.h  Main005.cpp  Main005.h  Main006.cpp  Main006.h  Main007.cpp  Main007.h  Main008.cpp  Main008.h  Main009.cpp  Main009.h
src/src01/shader/: 001.frag.glsl  003.frag.glsl  003.vert.glsl  004.frag.glsl  005.frag.glsl  005.vert.glsl  006.frag.glsl  006.vert.glsl  007.frag.glsl
src/src02/: Main021.cpp  Main021.h  Main022.cpp  Main022.h  Main023.cpp  Main023.h  Main024.cpp  Main024.h  Main025.cpp  Main025.h  Main026.cpp  Main026.h  Main027.cpp  Main027.h  Main028.cpp  Main028.h
src/src02/shader/: 021.frag.glsl  (+15 more)
src/src03/: Main031.cpp  Main031.h
src/src04/: Main041.cpp  Main041.h  Main0410.cpp  Main0410.h  Main042.cpp  Main042.h  Main043.cpp  Main043.h  Main044.cpp  Main044.h  Main045.cpp  Main045.h  Main046.cpp  Main046.h  Main047.cpp  Main047.h  Main048.cpp  Main048.h  Main049.cpp  Main049.h
src/src05/: Main050.cpp  Main050.h  Main051.cpp  Main051.h
(+25 files in other folders)
